--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       release_version:
-        description: 'Release title'
+        description: 'Release version'
         required: true
       release_notes:
         description: 'Release notes'
@@ -39,10 +39,13 @@ jobs:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
 
+      - name: Rename APK with version
+        run: mv ./app/build/outputs/apk/release/app-release.apk ./app/build/outputs/apk/release/sms-relay-${{ github.event.inputs.release_version != '' && github.event.inputs.release_version || github.ref_name }}.apk
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name || github.event.inputs.release_version }}
-          name: Release ${{ github.ref_name || github.event.inputs.release_version }}
+          tag_name: ${{ github.event.inputs.release_version || github.ref_name }}
+          name: Release ${{ github.event.inputs.release_version || github.ref_name }}
           body: ${{ github.event.inputs.release_notes || '' }}
-          files: ./app/build/outputs/apk/release/app-release.apk
+          files: ./app/build/outputs/apk/release/sms-relay-${{ github.event.inputs.release_version || github.ref_name }}.apk
